--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,13 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "apptwoway.apk"
+                }
+            }
         }
     }
 }
